Added webhook code

--- a/README
+++ b/README
@@ -44,4 +44,4 @@ For the SMS alert to be sent when a link is clicked in your email, you will need
 
 ![Webhook](./readme-images/webhook.png "Development Icon")
 
-You can find the code for the webhook [here](#).
+You can find the code for the webhook in the webhook directory.
